assets/themes/twitter/css/nav.css
/*-- header --*/

/* CSS Document */

header {
    position: absolute;
    z-index: 9;
    width: 100%;
}

.toggle,
[id^=drop] {
    display: none;
}

/* Giving a background-color to the nav container. */

nav {
    margin: 0;
    padding: 0;
    white-space: nowrap;
}
nav.mnu {
    margin-top: 1em;
    padding: 1em 1em;
}


#logo a {
    float: left;
    display: initial;
    margin: 0;
    color: #000;
}

#logo a span {
    color: #000;
}
  #logo h1 a{ 
	    font-size: 24px;
    text-transform: uppercase;
    display: initial;
    margin: 0;
    letter-spacing: 0.04em;
    line-height: 1.3em;
	color: #000;
    font-weight: 800;
}
#logo h1, #logo h1 a, #logo h1 a img {
    width: 100%;
    height: auto;
}
#logo {
    max-width: 2000px;
    width: calc(100% - 100px);
}
nav.mnu{
    margin-top: 2em;
    background: rgba(70, 71, 74, 0.25);
    padding: 1.3em 2em;
    border-radius: 8px;
    -webkit-border-radius: 8px;
    -moz-border-radius: 8px;
    -o-border-radius: 8px;
    -ms-border-radius: 8px;
}
/* Since we'll have the "ul li" "float:left"
 * we need to add a clear after the container. */

nav:after {
    content: "";
    display: table;
    clear: both;
}

/* Removing padding, margin and "list-style" from the "ul",
 * and adding "position:reltive" */

nav ul {
    float: right;
    padding: 0;
    margin: 0;
    list-style: none;
    position: relative;
}

/* Positioning the navigation items inline */

nav ul li {
    margin: 0px;
    display: inline-block;
    float: left;
}

/* Styling the links */

nav a {
    color: #000;
    text-transform: uppercase;
    font-weight: 700;
    font-size: 0.95em;
    letter-spacing: 0.075em;
}


nav ul li ul li:hover {
    background: #f8f9fa;
}

/* Background color change on Hover */

ul.menu li a:hover {
    color: #e44c65!important;
}

.menu li.active a {
    color: #e44c65;
}

/* Hide Dropdowns by Default
 * and giving it a position of absolute */

nav ul ul {
    display: none;
    position: absolute;
    /* has to be the same number as the "line-height" of "nav a" */
    top: 30px;
    background: #fff;
    padding: 10px;
}

/* Display Dropdowns on Hover */

nav ul li:hover > ul {
    display: inherit;
}

/* Fisrt Tier Dropdown */

nav ul ul li {
    width: 170px;
    float: none;
    display: list-item;
    position: relative;
}

nav ul ul li a {
    color: #333;
    padding: 5px 10px;
    display: block;
}

/* Second, Third and more Tiers	
 * We move the 2nd and 3rd etc tier dropdowns to the left
 * by the amount of the width of the first tier.
*/

nav ul ul ul li {
    position: relative;
    top: -60px;
    /* has to be the same number as the "width" of "nav ul ul li" */
    left: 170px;
}


/* Change ' +' in order to change the Dropdown symbol */

li > a:only-child:after {
    content: '';
}

.clearfix { margin-top: 70px; }


/* Media Queries
--------------------------------------------- */

@media all and (max-width: 768px) {

    #logo {
        display: block;
        padding: 0;
        width: 100%;
        text-align: center;
        float: none;
    }

    nav {
        margin: 0;
    }

    /* Hide the navigation menu by default */
    /* Also hide the  */
    .toggle + a,
    .menu {
        display: none;
    }

    /* Stylinf the toggle lable */
    .toggle {
        display: block;
        padding: 8px 20px;
        font-size: 15px;
        text-decoration: none;
        border: none;
        float: right;
        background-color: #ffffff;
        color: #333;
        cursor: pointer;
    }
    .menu .toggle {
        float: none;
        text-align: center;
        margin: auto;
        width: 80%;
        padding: 5px;
        font-weight: normal;
        font-size: 16px;
        letter-spacing: 1px;
    }

    .toggle:hover {
        color: #333;
        background-color: #fff;
    }

    /* Display Dropdown when clicked on Parent Lable */
    [id^=drop]:checked + ul {
        display: block;
        background: rgba(16, 16, 16, 0.85);
        padding: 15px 0;
        text-align: center;
		width: 100%;
    }

    /* Change menu item's width to 100% */
    nav ul li {
        display: block;
        width: 100%;
        padding: 5px 0;
    }

    nav ul ul .toggle,
    nav ul ul a {
        padding: 0 40px;
    }

    nav ul ul ul a {
        padding: 0 80px;
    }

    nav a:hover,
    nav ul ul ul a {
        background-color: transparent;
    }

    nav ul li ul li .toggle,
    nav ul ul a,
    nav ul ul ul a {
        padding: 14px 20px;
        color: #FFF;
        font-size: 17px;
    }


    nav ul li ul li .toggle,
    nav ul ul a {
        background-color: #212121;
    }

    /* Hide Dropdowns by Default */
    nav ul ul {
        float: none;
        position: static;
        color: #ffffff;
        /* has to be the same number as the "line-height" of "nav a" */
    }

    /* Hide menus on hover */
    nav ul ul li:hover > ul,
    nav ul li:hover > ul {
        display: none;
    }

    /* Fisrt Tier Dropdown */
    nav ul ul li {
        display: block;
        width: 100%;
        padding: 0;
    }

    nav ul ul ul li {
        position: static;
        /* has to be the same number as the "width" of "nav ul ul li" */
    }
    nav ul ul li a {
        color: #000;
        font-size: 0.85em;
    }
}

@media all and (max-width: 330px) {

    nav ul li {
        display: block;
        width: 94%;
    }
}
@media screen and (max-width: 991px) {
.clearfix { margin-top: 120px; }
}
@media screen and (max-width: 414px) {
.clearfix { margin-top: 100px; }
}

.footer {
    padding: 1.5em 0;
    background: #000000;
    text-align: center;
}
.footer p {
    font-size: 14px;
    letter-spacing: 1px;
    color: #555555;
    margin: 0;
    line-height: 1.8em;
}
.footer p a {
    color: #555555;
    text-decoration: none;
}

